@@ -105,6 +105,11 @@ deploy_dns = hosts
 ; Which 'hosts' file to modify, if the "deploy_dns" option is set to "hosts"
 deploy_dns_hosts_file = /etc/hosts
 
+; What format to write the hosts file in, if deploy_dns is set to "hosts".
+; 1 = lines look something like "127.0.0.1 localhost APPDOMAIN"
+; 2 = lines look something like "127.0.0.1 APPDOMAIN"
+deploy_dns_hosts_file_format = 1
+
 ; The IP address to assume the deployed app is running on, when modifying
 ; "hosts" files (see "deploy_dns" option).
 deploy_dns_hosts_ip = 127.0.0.1
